// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Grid Scope > generates prop for scope 1`] = `
"import {
        GQLProductsGridQuery,
        GQLProductsGridQueryVariables,
        GQLProductsFormFragment,
        GQLCreateProductMutation,
        GQLCreateProductMutationVariables,
        GQLUpdateProductPositionMutation,
        GQLUpdateProductPositionMutationVariables,
        GQLDeleteProductMutation,
        GQLDeleteProductMutationVariables
    } from "./ProductsGrid.generated";
    import { FormattedMessage } from "react-intl";
import { FormattedNumber } from "react-intl";
import { useIntl } from "react-intl";
import { ReactNode } from "react";
import { gql } from "@apollo/client";
import { useApolloClient } from "@apollo/client";
import { useQuery } from "@apollo/client";
import { Button } from "@dextinity/admin";
import { CrudContextMenu } from "@dextinity/admin";
import { CrudMoreActionsMenu } from "@dextinity/admin";
import { DataGridToolbar } from "@dextinity/admin";
import { ExportApi } from "@dextinity/admin";
import { filterByFragment } from "@dextinity/admin";
import { GridFilterButton } from "@dextinity/admin";
import { GridCellContent } from "@dextinity/admin";
import { GridColDef } from "@dextinity/admin";
import { dataGridDateTimeColumn } from "@dextinity/admin";
import { dataGridDateColumn } from "@dextinity/admin";
import { dataGridIdColumn } from "@dextinity/admin";
import { dataGridManyToManyColumn } from "@dextinity/admin";
import { dataGridOneToManyColumn } from "@dextinity/admin";
import { renderStaticSelectCell } from "@dextinity/admin";
import { messages } from "@dextinity/admin";
import { muiGridFilterToGql } from "@dextinity/admin";
import { StackLink } from "@dextinity/admin";
import { useStackSwitchApi } from "@dextinity/admin";
import { FillSpace } from "@dextinity/admin";
import { Tooltip } from "@dextinity/admin";
import { useBufferedRowCount } from "@dextinity/admin";
import { useDataGridExcelExport } from "@dextinity/admin";
import { usePersistentColumnState } from "@dextinity/admin";
import { BlockPreviewContent } from "@dextinity/cms-admin";
import { Alert } from "@mui/material";
import { Box } from "@mui/material";
import { IconButton } from "@mui/material";
import { Typography } from "@mui/material";
import { useTheme } from "@mui/material";
import { Menu } from "@mui/material";
import { MenuItem } from "@mui/material";
import { ListItemIcon } from "@mui/material";
import { ListItemText } from "@mui/material";
import { CircularProgress } from "@mui/material";
import { DataGrid } from "@mui/x-data-grid";
import { DataGridProps } from "@mui/x-data-grid";
import { GridLogicOperator } from "@mui/x-data-grid";
import { GridRenderCellParams } from "@mui/x-data-grid";
import { GridSlotsComponent } from "@mui/x-data-grid";
import { GridToolbarProps } from "@mui/x-data-grid";
import { GridColumnHeaderTitle } from "@mui/x-data-grid";
import { GridToolbarQuickFilter } from "@dextinity/admin";
import { GridRowOrderChangeParams } from "@mui/x-data-grid";
import { useMemo } from "react";
import { useDataGridRemote } from "@dextinity/admin";
import { GQLProductScope } from "@src/graphql.generated";
import { Add as AddIcon } from "@dextinity/admin-icons";
import { Edit as EditIcon } from "@dextinity/admin-icons";
import { Info as InfoIcon } from "@dextinity/admin-icons";
import { Excel as ExcelIcon } from "@dextinity/admin-icons";

    const productsFragment = gql\`
        fragment ProductsForm on Product {
            id
            title
        }
    \`;

    const productsQuery = gql\`
    query ProductsGrid($scope: ProductScope!, $offset: Int!, $limit: Int!) {
        products(scope: $scope, offset: $offset, limit: $limit) {
            nodes { ...ProductsForm } totalCount
        }
    }
    \${productsFragment}
    \`;

    

    


    
    function ProductsGridToolbar() {
        return (
            <DataGridToolbar>
                <FillSpace />
        <Button responsive startIcon={<AddIcon />} component={StackLink} pageName="add" payload="add">
        <FormattedMessage id="product.productsForm.newEntry" defaultMessage="New Product" />
    </Button>
            </DataGridToolbar>
        );
    }

    type Props = {
            scope: GQLProductScope;
        };

    export function ProductsGrid({scope }: Props) {
        
        const intl = useIntl();
        const dataGridProps = { ...useDataGridRemote(), ...usePersistentColumnState("ProductsGrid") };
        
        
        const stackSwitchApi = useStackSwitchApi();

        

        const handleRowClick: DataGridProps["onRowClick"] = (params) => {
            stackSwitchApi.activatePage("edit", params.row.id);
        };

        const columns: GridColDef<GQLProductsFormFragment>[] = useMemo(()=>[
            {field: "title",
headerName: intl.formatMessage({ id: "product.title", defaultMessage: "Title" }),
filterable: false,
sortable: false,
flex: 1,
minWidth: 150,},
                {field: "actions",
headerName: "",
sortable: false,
filterable: false,
type: "actions",
align: "right",
pinned: "right",
width: 52,
renderCell: (params) => {
                            return (
                                <>
                                
                                        <IconButton color="primary" component={StackLink} pageName="edit" payload={params.row.id}>
                                            <EditIcon />
                                        </IconButton>
                                </>
                            );
                                },}
        ],[intl]);

        

        const { data, loading, error } = useQuery<GQLProductsGridQuery, GQLProductsGridQueryVariables>(productsQuery, {
            variables: {
                scope, offset: dataGridProps.paginationModel.page * dataGridProps.paginationModel.pageSize, limit: dataGridProps.paginationModel.pageSize
            },
        });
        const rowCount = useBufferedRowCount(data?.products.totalCount);
        if (error) throw error;
        const rows = data?.products.nodes ?? [];

        

        return (
            <DataGrid
                {...dataGridProps}
                rows={rows}
                rowCount={rowCount}
                columns={columns}
                loading={loading}
                slots={{
                                toolbar: ProductsGridToolbar as GridSlotsComponent["toolbar"],
                            }}
                            
                
                
                onRowClick={handleRowClick}
                showToolbar
            />
        );
    }
    "
`;

exports[`Grid Scope > uses scope from context by default 1`] = `
"import {
        GQLProductsGridQuery,
        GQLProductsGridQueryVariables,
        GQLProductsFormFragment,
        GQLCreateProductMutation,
        GQLCreateProductMutationVariables,
        GQLUpdateProductPositionMutation,
        GQLUpdateProductPositionMutationVariables,
        GQLDeleteProductMutation,
        GQLDeleteProductMutationVariables
    } from "./ProductsGrid.generated";
    import { FormattedMessage } from "react-intl";
import { FormattedNumber } from "react-intl";
import { useIntl } from "react-intl";
import { ReactNode } from "react";
import { gql } from "@apollo/client";
import { useApolloClient } from "@apollo/client";
import { useQuery } from "@apollo/client";
import { Button } from "@dextinity/admin";
import { CrudContextMenu } from "@dextinity/admin";
import { CrudMoreActionsMenu } from "@dextinity/admin";
import { DataGridToolbar } from "@dextinity/admin";
import { ExportApi } from "@dextinity/admin";
import { filterByFragment } from "@dextinity/admin";
import { GridFilterButton } from "@dextinity/admin";
import { GridCellContent } from "@dextinity/admin";
import { GridColDef } from "@dextinity/admin";
import { dataGridDateTimeColumn } from "@dextinity/admin";
import { dataGridDateColumn } from "@dextinity/admin";
import { dataGridIdColumn } from "@dextinity/admin";
import { dataGridManyToManyColumn } from "@dextinity/admin";
import { dataGridOneToManyColumn } from "@dextinity/admin";
import { renderStaticSelectCell } from "@dextinity/admin";
import { messages } from "@dextinity/admin";
import { muiGridFilterToGql } from "@dextinity/admin";
import { StackLink } from "@dextinity/admin";
import { useStackSwitchApi } from "@dextinity/admin";
import { FillSpace } from "@dextinity/admin";
import { Tooltip } from "@dextinity/admin";
import { useBufferedRowCount } from "@dextinity/admin";
import { useDataGridExcelExport } from "@dextinity/admin";
import { usePersistentColumnState } from "@dextinity/admin";
import { BlockPreviewContent } from "@dextinity/cms-admin";
import { Alert } from "@mui/material";
import { Box } from "@mui/material";
import { IconButton } from "@mui/material";
import { Typography } from "@mui/material";
import { useTheme } from "@mui/material";
import { Menu } from "@mui/material";
import { MenuItem } from "@mui/material";
import { ListItemIcon } from "@mui/material";
import { ListItemText } from "@mui/material";
import { CircularProgress } from "@mui/material";
import { DataGrid } from "@mui/x-data-grid";
import { DataGridProps } from "@mui/x-data-grid";
import { GridLogicOperator } from "@mui/x-data-grid";
import { GridRenderCellParams } from "@mui/x-data-grid";
import { GridSlotsComponent } from "@mui/x-data-grid";
import { GridToolbarProps } from "@mui/x-data-grid";
import { GridColumnHeaderTitle } from "@mui/x-data-grid";
import { GridToolbarQuickFilter } from "@dextinity/admin";
import { GridRowOrderChangeParams } from "@mui/x-data-grid";
import { useMemo } from "react";
import { useDataGridRemote } from "@dextinity/admin";
import { GQLProductScope } from "@src/graphql.generated";
import { useContentScope } from "@dextinity/cms-admin";
import { Add as AddIcon } from "@dextinity/admin-icons";
import { Edit as EditIcon } from "@dextinity/admin-icons";
import { Info as InfoIcon } from "@dextinity/admin-icons";
import { Excel as ExcelIcon } from "@dextinity/admin-icons";

    const productsFragment = gql\`
        fragment ProductsForm on Product {
            id
            title
        }
    \`;

    const productsQuery = gql\`
    query ProductsGrid($scope: ProductScope!, $offset: Int!, $limit: Int!) {
        products(scope: $scope, offset: $offset, limit: $limit) {
            nodes { ...ProductsForm } totalCount
        }
    }
    \${productsFragment}
    \`;

    

    


    
    function ProductsGridToolbar() {
        return (
            <DataGridToolbar>
                <FillSpace />
        <Button responsive startIcon={<AddIcon />} component={StackLink} pageName="add" payload="add">
        <FormattedMessage id="product.productsForm.newEntry" defaultMessage="New Product" />
    </Button>
            </DataGridToolbar>
        );
    }

    

    export function ProductsGrid() {
        
        const intl = useIntl();
        const dataGridProps = { ...useDataGridRemote(), ...usePersistentColumnState("ProductsGrid") };
        const { scope } = useContentScope();
        
        const stackSwitchApi = useStackSwitchApi();

        

        const handleRowClick: DataGridProps["onRowClick"] = (params) => {
            stackSwitchApi.activatePage("edit", params.row.id);
        };

        const columns: GridColDef<GQLProductsFormFragment>[] = useMemo(()=>[
            {field: "title",
headerName: intl.formatMessage({ id: "product.title", defaultMessage: "Title" }),
filterable: false,
sortable: false,
flex: 1,
minWidth: 150,},
                {field: "actions",
headerName: "",
sortable: false,
filterable: false,
type: "actions",
align: "right",
pinned: "right",
width: 52,
renderCell: (params) => {
                            return (
                                <>
                                
                                        <IconButton color="primary" component={StackLink} pageName="edit" payload={params.row.id}>
                                            <EditIcon />
                                        </IconButton>
                                </>
                            );
                                },}
        ],[intl]);

        

        const { data, loading, error } = useQuery<GQLProductsGridQuery, GQLProductsGridQueryVariables>(productsQuery, {
            variables: {
                scope, offset: dataGridProps.paginationModel.page * dataGridProps.paginationModel.pageSize, limit: dataGridProps.paginationModel.pageSize
            },
        });
        const rowCount = useBufferedRowCount(data?.products.totalCount);
        if (error) throw error;
        const rows = data?.products.nodes ?? [];

        

        return (
            <DataGrid
                {...dataGridProps}
                rows={rows}
                rowCount={rowCount}
                columns={columns}
                loading={loading}
                slots={{
                                toolbar: ProductsGridToolbar as GridSlotsComponent["toolbar"],
                            }}
                            
                
                
                onRowClick={handleRowClick}
                showToolbar
            />
        );
    }
    "
`;
